<resources>
    <!-- Android Manifest -->
    <string name="facebook_app_id">1738469866425993</string>
    <string name="app_name">dishq</string>

    <string name="mixpanel_token">972575a59683072771e5130cbe977d05</string>
    <string name="appsflyer_dev_key">eazqXbf84E6ua5iCc2S3Ec</string>
    <string name="appsflyer_sender_id">1065480470289</string>

    <!-- signIn -->
    <string name="connect_with">Connect with</string>
    <string name="backend_facebook">facebook</string>
    <string name="conv_token">convert_token</string>
    <string name="backend_google">google-oauth2</string>
    <string name="server_client_id">
       1065480470289-kljstaji734o68q9m39f0mm4mpt4t2j1.apps.googleusercontent.com
    </string>
    <string name="client_id">FDv2hh91hLDZioTfI5zGV98DwmqLdix7aJJYfYGB</string>
    <string name="client_secret">
        uYl8MUXsU5pAnGgFQdTxvBhqROE5OinbXUzls5hpMtmjUvaPrWJppr8WThodCi7Qw0TcsjhYJJnzkxItGZA19TtWRSVIRY5GPhP2VXUyp7joPDFToDR0tNbXu58myMGg
    </string>
    <string name="facebook">facebook</string>
    <string name="google">google</string>

    <!-- OnBoarding -->
    <string name="hi_name">Hi %s</string>
    <string name="tell_about_prefs">Tell us about food and you</string>
    <string name="are_you">I\'m&#46;&#46;&#46;</string>
    <string name="vegetarian">VEGETARIAN</string>
    <string name="eggetarian">EGGETARIAN</string>
    <string name="non_veg">NON VEG</string>
    <string name="your_home_cuisine">Your home cuisine&#63;</string>
    <string name="your_fav_cuisine">Your fav cuisines&#63;</string>
    <string name="pick_one">&#40;Pick 1&#41;</string>
    <string name="pick_three">&#40;Pick 3&#41;</string>
    <string name="allergy">Food you avoid or are\nallergic to&#63;</string>
    <string name="optional">&#40;Optional&#41;</string>
    <string name="done">Done</string>

    <!-- BottomSheet -->
    <string name="rupee">\u20B9</string>
    <string name="vertical_line">&#124;</string>
    <string name="show_more">show more</string>
    <string name="delivery_image_1">delivery image 1</string>
    <string name="delivery_image_2">delivery image 2</string>
    <string name="delivery_image_3">delivery image 3</string>
    <string name="home_screen_image">home screen image</string>
    <string name="no_delivery_msg">No delivery option nearby</string>
    <string name="no_results_menu_finder">No Results</string>
    <string name="no_dineout_places_found">Dish not served nearby</string>

    <!-- HomeActivity -->
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="user">user</string>
    <string name="favourites">FAVOURITES</string>
    <string name="menu_finder">RESTAURANT SEARCH</string>
    <string name="settings">SETTINGS</string>
    <string name="rate">RATE</string>
    <string name="share">SHARE</string>
    <string name="about">ABOUT</string>
    <string name="oops">No dishes available</string>
    <string name="no_results">Try a different filter</string>

    <!-- Toolbar -->
    <string name="toolbar_back_button">toolbar back button</string>
    <string name="toolbar_search_button">toolbar search button</string>

    <!--FavouritesActivity -->
    <string name="fav_header">Favourites</string>
    <string name="no_fav">When you favourite a dish, it will be here</string>
    <string name="veg_tag">veg_tag</string>
    <string name="egg_tag">egg tag</string>
    <string name="non_veg_tag">non-veg tag</string>
    <string name="spicy_tag">spicy tag</string>
    <string name="alcohol_tag">alcohol tag</string>

    <!--MoodFilers -->
    <string name="apply">APPLY</string>
    <string name="reset">RESET</string>

    <!--Menu Activity -->
    <string name="cost_of_dish">\u20B9%s</string>
    <string name="personalized_menu_text">Your personalised menu</string>
    <string name="order_now">ORDER VIA</string>
    <string name="order_from">ORDER VIA</string>
    <string name="swiggy">Swiggy</string>
    <string name="foodpanda">Foodpanda</string>
    <string name="runnr">Runnr</string>
    <string name="zomato">Zomato</string>
    <string name="dineout">dineout</string>
    <string name="chooser_title">Open With</string>
    <string name="order">ORDER</string>
    <string name="book_table">BOOK TABLE</string>
    <string name="delivery">delivery</string>
    <string name="delmenu_back_button">delmenu back button</string>
    <string name="dineout_back_button">dineout back button</string>

    <!-- MenuFinderActivity -->
    <string name="title_activity_menu_finder">MenuFinder</string>
    <string name="nearby_restaurants">Nearby Restaurants :</string>
    <string name="search_for_restaurant">Enter restaurant name</string>

    <!-- AboutUsActivity -->
    <string name="about_us">About</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="blog">Blog</string>
    <string name="explore_now">GO DISCOVER</string>
    <string name="pop_up_photo">pop up photo</string>
    <string name="home_bg_image">home screen bg image</string>
    <string name="card_bg_image">card bg image</string>
    <string name="card_favbg_image">card favbg image</string>
    <string name="dine_appbar_image">appbar_bg_image</string>
    <string name="that_s_it">Want more dishes?</string>
    <string name="text_browsed">Just answer the following&#58;</string>
    <string name="feedback_yes">YES</string>
    <string name="feedback_load_more">See More Dishes</string>
    <string name="feedback_no">NO</string>
    <string name="feedback_images">feedback_images</string>
    <string name="feedback_thanks">Thanks!</string>
    <string name="no_recipes_available">Recipe coming soon</string>
    <string name="del_background_image">del background image</string>
    <string name="dine_bg_image">dine bg image</string>
    <string name="home_empty_bg">home empty bg</string>
    <string name="nearby_rest">Nearby Restaurants :</string>
    <string name="diff_rest">Try searching for different restaurant</string>
    <string name="open_in_browser">OPEN IN BROWSER</string>
    <string name="how_are_you_feeling">How are you feeling?</string>
    <string name="filters_search_text">Enter cuisine (Thai) or dish type (Biryani)</string>
    <string name="filters_search_icon">filters search icon</string>
    <string name="no_filters_to_display">No results found</string>
    <string name="log_out">Log Out</string>
    <string name="logout_icon">logout icon</string>
    <string name="settings_title">Settings</string>
    <string name="served_at">Served at:</string>
    <string name="delivered_by">Delivered by:</string>
    <string name="view_recipe">View recipe:</string>
    <string name="home_or">OR</string>
    <string name="home_feeling_lucky">Surprise me</string>
    <string name="menu_serves">Serves:</string>
    <string name="vibe">Features:</string>
    <string name="book_table_via">BOOK TABLE VIA</string>
    <string name="load_more_image">load more image</string>
    <string name="delivery_icon">delivery icon</string>
    <string name="directions">DIRECTIONS</string>
    <string name="call">CALL</string>
    <string name="dineout_book">Dineout</string>
    <string name="eazydiner_book">Eazydiner</string>
    <string name="closed">CLOSED NOW</string>
    <string name="close_cross">close cross</string>

</resources>
