<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar1"
        android:layout_width="match_parent"
        android:layout_height="56.3dp"
        android:background="#FFFFFF">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/aboutus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/about_us"
                    android:textSize="@dimen/text_size_13" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:background="#000000" />

                <TextView
                    android:id="@+id/Blog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/blog"
                    android:textSize="@dimen/text_size_13" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:background="#000000" />

                <TextView
                    android:id="@+id/terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/terms_of_use"
                    android:textSize="@dimen/text_size_13" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:background="#000000" />

                <TextView
                    android:id="@+id/Privacypolicy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/privacy_policy"
                    android:textSize="@dimen/text_size_13" />

            </LinearLayout>

        </ScrollView>

    </android.support.v7.widget.Toolbar>

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@drawable/shadow" />
</LinearLayout>
