<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rl_no_del"
        android:layout_marginTop="200dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/no_del_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/text_size_20"
            android:textColor="@color/black"
            android:text="@string/no_delivery_msg"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/delivered_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13.7dp"
        android:layout_marginTop="4dp"
        android:textSize="@dimen/text_size_16"
        android:textColor="@color/black"
        android:text="@string/delivered_by"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/delivery_rest_cardlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/delivered_by"
        android:layout_marginTop="1dp"
        android:layout_marginStart="13.7dp"
        android:layout_marginEnd="13.7dp"
        android:layout_marginBottom="12dp" />

    <ProgressBar
        android:id="@+id/del_bsf_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        style="?android:attr/progressBarStyleInverse"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/progress"
        android:visibility="visible"/>

    <Button

        android:id="@+id/delivery_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/delivery_rest_cardlist"
        android:background="#00000000"
        android:layout_centerHorizontal="true"
        android:text="@string/show_more"
        android:drawableBottom="@drawable/eat_show_more"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:visibility="gone"/>

</RelativeLayout>