<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/onboarding_screen4"
    android:orientation="vertical">

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/mainmenu"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:alpha="0.85"
        android:foreground="@drawable/onboardingfourth"/>

    <Button
        android:id="@+id/allergy_cuisine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:background="@drawable/onboarding_ques_button"
        android:clickable="false"
        android:gravity="start|center_vertical"
        android:paddingEnd="17dp"
        android:paddingStart="15dp"
        android:text="@string/allergy"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_26" />

    <TextView
        android:id="@+id/optional"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/allergy_cuisine"
        android:layout_marginStart="14dp"
        android:layout_marginTop="10dp"
        android:text="@string/optional"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_16" />

        <com.wefika.flowlayout.FlowLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/allergy_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/optional"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp"
            android:layout_marginTop="10dp"
            android:gravity="start|top">

        </com.wefika.flowlayout.FlowLayout>

    <Button
        android:id="@+id/done"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="19dp"
        android:layout_marginStart="14dp"
        android:background="@drawable/done_button_shape"
        android:gravity="center"
        android:text="@string/done"
        android:textAlignment="center"
        android:textAllCaps="true"
        style="?android:attr/borderlessButtonStyle"
        android:textColor="@color/black" />

</RelativeLayout>