<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_menu_finder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="version1.dishq.dishq.ui.MenuFinder"
    tools:showIn="@layout/activity_menu_finder">

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleInverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:background="@drawable/progress"
        android:indeterminate="true"
        android:visibility="gone" />

    <ListView
        android:id="@+id/suggest_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="16dp"
        android:divider="@android:color/transparent"
        android:dividerHeight="10.0sp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/noresult"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/menufinder_no_results_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/no_results_menu_finder"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/search_diff_rest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:visibility="visible"
            android:text="@string/diff_rest"
            android:textColor="#54000000"
            android:textSize="@dimen/text_size_16" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_nearby_rest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/nearby_rest_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nearby_rest"
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/black"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/menu_finder_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/nearby_rest_text"
            android:layout_marginTop="14dp" />

    </RelativeLayout>

</LinearLayout>
